--- a/frontend/goal_setting.html
+++ b/frontend/goal_setting.html
@@ -135,7 +135,7 @@
     </div>
 
     <div id="progress-container">
-        <h3>Progress</h3>
+        <h3>See Your Progress</h3>
         <canvas id="progress-chart" width="200" height="200"></canvas>
     </div>
     </div>
@@ -172,7 +172,7 @@
                     label: 'Goal Progress',
                     <!-- Example data: 3 completed, 7 in progress -->
                     data: [3,7],
-                    backgroundColor: ['#8FBC8F', '#EEE'],
+                    backgroundColor: ['#E37383', '#EEE'],
                     borderWidth: 1
                     }]
             },
